--- a/HDL-Batch-installer-SRC/wxsmith/HDL_Batch_installerframe.wxs
+++ b/HDL-Batch-installer-SRC/wxsmith/HDL_Batch_installerframe.wxs
@@ -400,7 +400,16 @@
 														<option>1</option>
 													</object>
 													<object class="sizeritem">
-														<object class="wxBoxSizer" variable="BoxSizer4" member="no" />
+														<object class="wxBoxSizer" variable="BoxSizer4" member="no">
+															<object class="sizeritem">
+																<object class="wxButton" name="ID_BUTTON12" variable="PFSBrowserCall" member="yes">
+																	<label>PFS FileBrowser</label>
+																	<handler function="OnPFSBrowserCallClick" entry="EVT_BUTTON" />
+																</object>
+																<flag>wxALIGN_CENTER_VERTICAL</flag>
+																<border>5</border>
+															</object>
+														</object>
 														<flag>wxALL|wxEXPAND</flag>
 														<border>5</border>
 														<option>1</option>
