--- a/HDL-Batch-installer-SRC/wxsmith/PFSShellBrowser.wxs
+++ b/HDL-Batch-installer-SRC/wxsmith/PFSShellBrowser.wxs
@@ -4,6 +4,7 @@
 		<title>PFS Browser</title>
 		<id_arg>0</id_arg>
 		<style>wxDEFAULT_DIALOG_STYLE|wxRESIZE_BORDER|wxCLOSE_BOX|wxMAXIMIZE_BOX|wxMINIMIZE_BOX</style>
+		<handler function="OnWindowClose" entry="EVT_CLOSE" />
 		<object class="wxBoxSizer" variable="BoxSizer1" member="no">
 			<orient>wxVERTICAL</orient>
 			<object class="sizeritem">
@@ -47,6 +48,7 @@
 								<object class="wxFilePickerCtrl" name="ID_FILEPICKERCTRL1" variable="HDDFileDLG" member="yes">
 									<message></message>
 									<path>D:\\Baul\\Paula\\Desktop\\DEV9hdd.raw</path>
+									<wildcard></wildcard>
 									<enabled>0</enabled>
 								</object>
 								<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
