--- a/HDL-Batch-installer-SRC/wxsmith/HDL_Batch_installerframe.wxs
+++ b/HDL-Batch-installer-SRC/wxsmith/HDL_Batch_installerframe.wxs
@@ -400,7 +400,16 @@
 														<option>1</option>
 													</object>
 													<object class="sizeritem">
-														<object class="wxBoxSizer" variable="BoxSizer4" member="no" />
+														<object class="wxBoxSizer" variable="BoxSizer4" member="no">
+															<object class="sizeritem">
+																<object class="wxButton" name="ID_BUTTON12" variable="PFSBrowserCall" member="yes">
+																	<label>PFS FileBrowser</label>
+																	<handler function="OnPFSBrowserCallClick" entry="EVT_BUTTON" />
+																</object>
+																<flag>wxALIGN_CENTER_VERTICAL</flag>
+																<border>5</border>
+															</object>
+														</object>
 														<flag>wxALL|wxEXPAND</flag>
 														<border>5</border>
 														<option>1</option>
@@ -511,37 +520,45 @@
 		<object class="wxMenu" variable="about_2_install_menu" member="yes">
 			<object class="wxMenuItem" name="ID_MENUITEM3" variable="MenuItem8" member="yes">
 				<label>Open File location</label>
+				<bitmap stock_id="wxART_FOLDER_OPEN" stock_client="wxART_BUTTON" />
 				<handler function="OnItemListShowRequest" entry="EVT_MENU" />
 			</object>
 			<object class="wxMenuItem" name="ID_MENUITEM18" variable="Redump_search" member="yes">
 				<label>Calculate MD5 Hash</label>
+				<bitmap stock_id="wxART_REPORT_VIEW" stock_client="wxART_BUTTON" />
 				<handler function="OnCalculateMD5Selected" entry="EVT_MENU" />
 			</object>
 			<object class="wxMenuItem" name="ID_MENUITEM4" variable="MenuItem9" member="yes">
 				<label>Remove from List</label>
+				<bitmap stock_id="wxART_CROSS_MARK" stock_client="wxART_BUTTON" />
 				<handler function="RemoveISOfromList" entry="EVT_MENU" />
 			</object>
 		</object>
 		<object class="wxMenu" variable="Browser_menu" member="yes">
 			<object class="wxMenuItem" name="ID_MENUITEM5" variable="MenuItem10" member="yes">
 				<label>Extract Game(s)</label>
+				<bitmap stock_id="wxART_FILE_OPEN" stock_client="wxART_BUTTON" />
 				<handler function="OnExtractInstalledGameRequest" entry="EVT_MENU" />
 			</object>
 			<object class="wxMenuItem" name="ID_MENUITEM7" variable="MenuItem12" member="yes">
 				<label>Download assets</label>
+				<bitmap stock_id="wxART_GO_DOWN" stock_client="wxART_BUTTON" />
 				<handler function="OnInstalledGameAssetsDownloadRequest" entry="EVT_MENU" />
 			</object>
 			<object class="wxMenuItem" name="ID_MENUITEM14" variable="MenuItem18" member="yes">
 				<label>Transfer game(s) to another PS2 HDD</label>
+				<bitmap stock_id="wxART_COPY" stock_client="wxART_BUTTON" />
 				<handler function="OnSelectiveGameMigration" entry="EVT_MENU" />
 			</object>
 			<object class="separator" />
 			<object class="wxMenuItem" name="ID_MENUITEM6" variable="MenuItem11" member="yes">
 				<label>Rename</label>
+				<bitmap stock_id="wxART_FIND_AND_REPLACE" stock_client="wxART_BUTTON" />
 				<handler function="OnInstalledGameRenameRequest" entry="EVT_MENU" />
 			</object>
 			<object class="wxMenuItem" name="ID_MENUITEM11" variable="MenuItem16" member="yes">
 				<label>Inject OPL Launcher</label>
+				<bitmap stock_id="wxART_FILE_SAVE" stock_client="wxART_BUTTON" />
 				<handler function="OnManualInjectionRequest" entry="EVT_MENU" />
 			</object>
 			<object class="wxMenuItem" name="ID_MENUITEM12" variable="MenuItem17" member="yes">
@@ -551,11 +568,13 @@
 			<object class="separator" />
 			<object class="wxMenuItem" name="ID_MENUITEM8" variable="MenuItem13" member="yes">
 				<label>Information</label>
+				<bitmap stock_id="wxART_INFORMATION" stock_client="wxART_BUTTON" />
 				<handler function="OnGameInfoRequest" entry="EVT_MENU" />
 			</object>
 			<object class="wxMenuItem" name="DELETE_GAME_ID" variable="DeleteGameMenuItem" member="yes">
 				<label>Delete game</label>
 				<enabled>0</enabled>
+				<bitmap stock_id="wxART_CROSS_MARK" stock_client="wxART_BUTTON" />
 				<handler function="OnGameDeletionRequest" entry="EVT_MENU" />
 			</object>
 		</object>
