disable hdd2hdd cherry pick game transfer
untill I repurpose it in a better way.

--- a/HDL-Batch-installer-SRC/wxsmith/HDL_Batch_installerframe.wxs
+++ b/HDL-Batch-installer-SRC/wxsmith/HDL_Batch_installerframe.wxs
@@ -547,6 +547,7 @@
 			</object>
 			<object class="wxMenuItem" name="ID_MENUITEM14" variable="MenuItem18" member="yes">
 				<label>Transfer game(s) to another PS2 HDD</label>
+				<enabled>0</enabled>
 				<bitmap stock_id="wxART_COPY" stock_client="wxART_BUTTON" />
 				<handler function="OnSelectiveGameMigration" entry="EVT_MENU" />
 			</object>
