--- a/HDL-Batch-installer-SRC/wxsmith/HDL_Batch_installerframe.wxs
+++ b/HDL-Batch-installer-SRC/wxsmith/HDL_Batch_installerframe.wxs
@@ -263,7 +263,15 @@
 														</object>
 														<flag>wxALL|wxEXPAND</flag>
 														<border>1</border>
-														<option>1</option>
+														<option>2</option>
+													</object>
+													<object class="sizeritem">
+														<object class="wxTextCtrl" name="ID_TEXTCTRL2" variable="GameCountDisplay" member="yes">
+															<style>wxTE_READONLY|wxBORDER_NONE</style>
+														</object>
+														<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+														<border>5</border>
+														<option>2</option>
 													</object>
 													<object class="sizeritem">
 														<object class="wxButton" name="ID_BUTTON8" variable="Button3" member="yes">
@@ -276,7 +284,7 @@
 														<option>1</option>
 													</object>
 												</object>
-												<flag>wxALL|wxEXPAND</flag>
+												<flag>wxEXPAND</flag>
 												<border>5</border>
 												<option>1</option>
 											</object>
