HDL Batch Installer `3.7.0.0` (#101)
* modify project to build 32bit version on a wxwidgets DLL

* fix conditions for disabling PFS filebrowser
> when feature is disabled compile time and run time (eg: dll init fail)

* [install] implement progress gauge on toolbar icon

* [PFS Browser]: fix non initialized error counter

* add release DLLs

* push missing files

* implement win32 API drive listing

* push files

* Delete PR_Labeler.yml

* remove 32 bits release

* push final changes

* ignore layout file

* QOL: tag update shouldnt run out of master branch

* Update Repack-and-release.yml

* update translation template and spanish lang

* move init code to constructor
> Silly mistakes that I made years ago. back when I was still learning the basics

* push remaining files for release

--- a/HDL-Batch-installer-SRC/wxsmith/HDL_Batch_installerframe.wxs
+++ b/HDL-Batch-installer-SRC/wxsmith/HDL_Batch_installerframe.wxs
@@ -19,7 +19,6 @@
 		<id_arg>0</id_arg>
 		<style>wxCAPTION|wxSYSTEM_MENU|wxRESIZE_BORDER|wxCLOSE_BOX|wxMAXIMIZE_BOX|wxMINIMIZE_BOX|wxCLIP_CHILDREN</style>
 		<handler function="OnClose" entry="EVT_CLOSE" />
-		<handler function="OnPaint" entry="EVT_PAINT" />
 		<object class="wxPanel" name="ID_PANEL5" variable="Panel5" member="yes">
 			<pos>0,0</pos>
 			<minsize>557,691</minsize>
@@ -263,7 +262,15 @@
 														</object>
 														<flag>wxALL|wxEXPAND</flag>
 														<border>1</border>
-														<option>1</option>
+														<option>2</option>
+													</object>
+													<object class="sizeritem">
+														<object class="wxTextCtrl" name="ID_TEXTCTRL2" variable="GameCountDisplay" member="yes">
+															<style>wxTE_READONLY|wxBORDER_NONE</style>
+														</object>
+														<flag>wxALL|wxEXPAND</flag>
+														<border>5</border>
+														<option>2</option>
 													</object>
 													<object class="sizeritem">
 														<object class="wxButton" name="ID_BUTTON8" variable="Button3" member="yes">
@@ -276,7 +283,7 @@
 														<option>1</option>
 													</object>
 												</object>
-												<flag>wxALL|wxEXPAND</flag>
+												<flag>wxEXPAND</flag>
 												<border>5</border>
 												<option>1</option>
 											</object>
